frontend/src/components/Auth/SignupFormModal/SignupForm.css
/* ------------------- Nav signup ------------------- */
#nav-signup-button {
    border: none;
    border-radius: 25px;
    margin-left: 15px;
    font-size: 15px;
    padding: 9px 17px;
    background-color: #6e7e3c;
    color: #fefae0;
    font-size: 15px;
}

#nav-signup-button:hover {
    cursor: pointer;
    background-color: #5f6d34;
}

/* ------------------- Signup Container ------------------- */
.signup-container {
    padding: 25px;
    display: flex;
    justify-content: center;
    border-radius: 20px;
    background-color: #fefae0;
    width: 425px;
    height: 425px;
    background-color: #faf8eb;
}

.signup-form {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    width: 90%;
    border-radius: 10px;
}

#signup-button {
    border: none;
    border-radius: 10px;
    margin: 5px;
    padding: 7px;
    width: 100%;
    background-color: rgb(255, 235, 154);
    color: rgb(102, 70, 10);
    font-size: 14px;
}

#signup-button:hover {
    cursor: pointer;
    background-color: rgb(245, 223, 133);
}

.signup-labels {
    display: flex;
    flex-direction: column;
    width: 100%;
    padding: 10px;
    color: rgb(126, 86, 11);
    font-size: 12px;
}

.signup-inputs {
    border: none;
    border-radius: 10px;
    font-size: 12px;
    padding: 7px;
    margin: 5px 0;
    background-color: rgb(255, 242, 190);
    color: rgb(126, 86, 11);
}

